// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The "clear" action should remove pending changes for the currently focused node. 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "nodes": Immutable.Map {
      "byContextPath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "contextPath": "/my/path@user-foo",
        },
      },
      "focused": Immutable.Map {
        "contextPath": "/my/path@user-foo",
      },
    },
  },
  "ui": Immutable.Map {
    "inspector": Immutable.Map {
      "valuesByNodePath": Immutable.Map {
        "/my/other/path@user-foo": Immutable.Map {
          "test4": Immutable.Map {
            "value": "value4",
          },
        },
      },
      "shouldPromptToHandleUnappliedChanges": false,
    },
  },
}
`;

exports[`The "clear" action should remove pending changes for the currently focused node. 2`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "nodes": Immutable.Map {
      "byContextPath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "contextPath": "/my/path@user-foo",
        },
      },
      "focused": Immutable.Map {
        "contextPath": "/my/path@user-foo",
      },
    },
  },
  "ui": Immutable.Map {
    "inspector": Immutable.Map {
      "valuesByNodePath": Immutable.Map {
        "/my/other/path@user-foo": Immutable.Map {
          "test4": Immutable.Map {
            "value": "value4",
          },
        },
      },
      "shouldPromptToHandleUnappliedChanges": false,
    },
  },
}
`;

exports[`The "commit" action should ignore the last modification, if it doesn't differ from the current node state 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "nodes": Immutable.Map {
      "byContextPath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "contextPath": "/my/path@user-foo",
          "properties": Immutable.Map {
            "title": "Foo",
          },
        },
      },
      "focused": Immutable.Map {
        "contextPath": "/my/path@user-foo",
      },
    },
  },
  "ui": Immutable.Map {
    "inspector": Immutable.Map {
      "valuesByNodePath": Immutable.Map {},
    },
  },
}
`;

exports[`The "commit" action should store the last modification on the currently focused node. 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "nodes": Immutable.Map {
      "byContextPath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "contextPath": "/my/path@user-foo",
        },
      },
      "focused": Immutable.Map {
        "contextPath": "/my/path@user-foo",
      },
    },
  },
  "ui": Immutable.Map {
    "inspector": Immutable.Map {
      "valuesByNodePath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "test": Immutable.Map {
            "value": "value",
          },
        },
      },
    },
  },
}
`;

exports[`The "commit" action should store the last modification on the currently focused node. 2`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "nodes": Immutable.Map {
      "byContextPath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "contextPath": "/my/path@user-foo",
        },
      },
      "focused": Immutable.Map {
        "contextPath": "/my/path@user-foo",
      },
    },
  },
  "ui": Immutable.Map {
    "inspector": Immutable.Map {
      "valuesByNodePath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "test": Immutable.Map {
            "value": "another value",
          },
        },
      },
    },
  },
}
`;

exports[`The "commit" action should store the last modification on the currently focused node. 3`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "nodes": Immutable.Map {
      "byContextPath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "contextPath": "/my/path@user-foo",
        },
      },
      "focused": Immutable.Map {
        "contextPath": "/my/path@user-foo",
      },
    },
  },
  "ui": Immutable.Map {
    "inspector": Immutable.Map {
      "valuesByNodePath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "test": Immutable.Map {
            "value": "another value",
          },
        },
      },
    },
  },
}
`;

exports[`The "commit" action should store the last modification on the currently focused node. 4`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "nodes": Immutable.Map {
      "byContextPath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "contextPath": "/my/path@user-foo",
        },
      },
      "focused": Immutable.Map {
        "contextPath": "/my/path@user-foo",
      },
    },
  },
  "ui": Immutable.Map {
    "inspector": Immutable.Map {
      "valuesByNodePath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "test": Immutable.Map {
            "value": "another value",
            "hooks": Immutable.Map {
              "some": "hook",
            },
          },
        },
      },
    },
  },
}
`;

exports[`The "discard" action should remove pending changes for the currently focused node. 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "nodes": Immutable.Map {
      "byContextPath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "contextPath": "/my/path@user-foo",
        },
      },
      "focused": Immutable.Map {
        "contextPath": "/my/path@user-foo",
      },
    },
  },
  "ui": Immutable.Map {
    "inspector": Immutable.Map {
      "valuesByNodePath": Immutable.Map {
        "/my/other/path@user-foo": Immutable.Map {
          "test4": Immutable.Map {
            "value": "value4",
          },
        },
      },
      "shouldPromptToHandleUnappliedChanges": false,
    },
  },
}
`;

exports[`The "discard" action should remove pending changes for the currently focused node. 2`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "nodes": Immutable.Map {
      "byContextPath": Immutable.Map {
        "/my/path@user-foo": Immutable.Map {
          "contextPath": "/my/path@user-foo",
        },
      },
      "focused": Immutable.Map {
        "contextPath": "/my/path@user-foo",
      },
    },
  },
  "ui": Immutable.Map {
    "inspector": Immutable.Map {
      "valuesByNodePath": Immutable.Map {
        "/my/other/path@user-foo": Immutable.Map {
          "test4": Immutable.Map {
            "value": "value4",
          },
        },
      },
      "shouldPromptToHandleUnappliedChanges": false,
    },
  },
}
`;
